# shortlix-ats

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  PRD.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  pyproject.toml  railway.toml  railway.worker.toml  requirements.txt  seed.py  start.sh
backend/apps/accounts/: admin.py  auth_urls.py  models.py  role_urls.py  role_views.py  serializers.py  user_urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_role.py  0002_remove_user_unique_sso_identity_and_more.py  0003_add_role_permission_models.py
backend/apps/activity/: apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/activity/migrations/: 0001_initial.py
backend/apps/candidates/: admin.py  apps.py  employee_urls.py  employee_views.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/candidates/migrations/: 0001_initial.py  0002_perf_indexes.py  0002_remove_candidatejobmapping_unique_candidate_per_job_and_more.py  0003_alter_resumefile_file.py  0004_remove_expected_ctc.py  0005_pipeline_macro_stages.py  0007_candidatereminder.py  (+18 more)
backend/apps/core/: admin.py  models.py  pagination.py  permissions.py  rbac.py
backend/apps/dashboard/: models.py  serializers.py  urls.py  views.py
backend/apps/departments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/interviews/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/jobs/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/notifications/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/apps/requisitions/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/apps/resumes/: __init__.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
(+158 files in other folders)
