[project]
name = "ats-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "django>=5.0,<6.0",
  "djangorestframework>=3.15",
  "djangorestframework-simplejwt>=5.3",
  "django-cors-headers>=4.3",
  "django-filter>=24.0",
  "drf-spectacular>=0.27",
  "psycopg[binary]>=3.1",
  "django-environ>=0.11",
  "google-generativeai>=0.8.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "apps*"]
